--- a/src/database.properties
+++ b/src/database.properties
@@ -1,8 +1,10 @@
 #databse.irl is not being used- Shall we delete it.
-#database.url=jdbc:mysql://192.168.0.13:3306/ks_master
-database.url=jdbc:mysql://localhost:3306/cw_admin
+database.url=jdbc:mysql://localhost:3306/cinchwallet
 database.userName=root
 database.password=1234
+#database.url=jdbc:mysql://cinchwallet.cjobegfhied1.us-west-2.rds.amazonaws.com:3306/cinchwallet
+#database.user=cinchwallet
+#database.password=cinchwallet
 database.password_encrypted=false
 database.driver_class=com.mysql.jdbc.Driver
 #Default INITIAL_SIZE is 0. The initial number of connections that are created when the pool is started.
