--- a/src/response_code.properties
+++ b/src/response_code.properties
@@ -2,6 +2,8 @@
 0001=Card Not found
 0002=Insufficient Balance on Card
 0003=Already Active card
+0003=Invalid Member
 0005=Inactive New Card
+0006=Invalid New Card
 9074=Processor failed to process transaction
 9009=Processor Internal error
